--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </h1>
     <footer>
         This project was coded with ❤️ by <a href="https://github.com/nanceed" target="_blank">Nancy Duong,</a>
-        and is open-sourced on <a href="#" target="_blank">GitHub</a>
-
+        and is open-sourced on <a href="https://github.com/nanceed/Wonderful-World-Clock" target="_blank">GitHub</a>
+        and hosted on <a href="https://wonderful-world-clock.netlify.app/" target="_blank">Netlify</a>
     </footer>
     <script src="src/index.js"></script>
 </body>
