Added the basic HTML

--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <title>Wonderful World Clock</title>
 </head>
 <body>
+    <div class="container">
     <h1>
         World Clock
     </h1>
+    <select>
+        <option value="">--Select a city--</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Hong Kong</option>
+    </select>
+    <div class="city">
+    <h2>Los Angeles</h2>
+    <div class="date">May 16th 2024</div>
+    <div class="time">9:16:53 PM</div>
+    <div class="city">
+    <h2>Sydney</h2>
+    <div class="date">May 16th 2024</div>
+    <div class="time">9:16:53 PM</div>
+    </div>
+    </div>
     <footer>
         This project was coded with ❤️ by <a href="https://github.com/nanceed" target="_blank">Nancy Duong,</a>
         and is open-sourced on <a href="https://github.com/nanceed/Wonderful-World-Clock" target="_blank">GitHub</a>
