Styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
         <option value="">Hong Kong</option>
     </select>
     <div class="city">
-    <h2>Los Angeles</h2>
+        <div>
+        <h2>Los Angeles</h2>
     <div class="date">May 16th 2024</div>
-    <div class="time">9:16:53 PM</div>
+    </div>
+    <div class="time">9:16:53 <small>PM</small></div>
+    </div>
     <div class="city">
-    <h2>Sydney</h2>
+        <div>
+        <h2>Paris</h2>
     <div class="date">May 16th 2024</div>
-    <div class="time">9:16:53 PM</div>
+    </div>
+    <div class="time">9:16:53 <small>PM</small></div>
     </div>
     </div>
     <footer>
-        This project was coded with ❤️ by <a href="https://github.com/nanceed" target="_blank">Nancy Duong,</a>
+        This project was coded with ❤️ by <a href="https://github.com/nanceed" target="_blank"><strong>Nancy Duong</strong></a>
         and is open-sourced on <a href="https://github.com/nanceed/Wonderful-World-Clock" target="_blank">GitHub</a>
         and hosted on <a href="https://wonderful-world-clock.netlify.app/" target="_blank">Netlify</a>
     </footer>
