--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>Wonderful World Clock</title>
 </head>
 <body>
@@ -17,19 +19,19 @@
         <option value="">New York</option>
         <option value="">Hong Kong</option>
     </select>
-    <div class="city">
+    <div class="city" id="los-angeles">
         <div>
         <h2>Los Angeles</h2>
-    <div class="date">May 16th 2024</div>
+    <div class="date"></div>
     </div>
-    <div class="time">9:16:53 <small>PM</small></div>
+    <div class="time"></div>
     </div>
-    <div class="city">
+    <div class="city" id="paris">
         <div>
         <h2>Paris</h2>
-    <div class="date">May 16th 2024</div>
+    <div class="date"></div>
     </div>
-    <div class="time">9:16:53 <small>PM</small></div>
+    <div class="time"></div>
     </div>
     </div>
     <footer>
