Added the functionality for the select

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <h1>
         World Clock
     </h1>
-    <select>
+    <select id="city">
         <option value="">--Select a city--</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Hong Kong</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Asia/Hong_Kong">Hong Kong</option>
     </select>
+    <div id="cities">
     <div class="city" id="los-angeles">
         <div>
         <h2>Los Angeles</h2>
@@ -32,6 +33,7 @@
     <div class="date"></div>
     </div>
     <div class="time"></div>
+    </div>
     </div>
     </div>
     <footer>
