--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </h1>
     <select id="city">
         <option value="">--Select a city--</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Asia/Hong_Kong">Hong Kong</option>
