Updated CSS for project

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 </head>
 <body>
     <div class="container">
-    <h1>
-        World Clock
-    </h1>
+        <img src="https://wallpapers.com/images/high/gudetama-lazy-egg-character-4qic95pp968fpsep.png" alt="">
+         <h1>
+            World Clock
+        </h1>
     <select id="city">
-        <option value="">--Select a city--</option>
-        <option value="current">My current location</option>
-        <option value="Europe/Athens">Athens</option>
-        <option value="Europe/Dublin">Dublin</option>
-        <option value="Asia/Hong_Kong">Hong Kong</option>
-        <option value="America/New_York">New York</option>
-        <option value="Atlantic/Reykjavik">Reykjavik</option>
-        <option value="Europe/Tallin">Tallin</option>
-        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="">--SELECT A CITY--</option>
+        <option value="current">MY CURRENT LOCATION</option>
+        <option value="Europe/Athens">ATHENS</option>
+        <option value="Europe/Dublin">DUBLIN</option>
+        <option value="Asia/Hong_Kong">HONG KONG</option>
+        <option value="America/New_York">NEW YORK</option>
+        <option value="Atlantic/Reykjavik">REYKJAVIK</option>
+        <option value="Europe/Tallin">TALLIN</option>
+        <option value="Asia/Tokyo">TOKYO</option>
     </select>
     
     <div id="cities">
@@ -51,8 +52,9 @@
     </div>
     </div>
     </div>
+    
     <footer>
-        This project was coded with ❤️ by <a href="https://github.com/nanceed" target="_blank"><strong>Nancy Duong</strong></a>
+        This project was coded by <a href="https://github.com/nanceed" target="_blank"><strong>Nancy Duong</strong></a>
         and is open-sourced on <a href="https://github.com/nanceed/Wonderful-World-Clock" target="_blank">GitHub</a>
         and hosted on <a href="https://wonderful-world-clock.netlify.app/" target="_blank">Netlify</a>
     </footer>
