Updated additional CSS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             World Clock
         </h1>
     <select id="city">
-        <option value="">--SELECT A CITY--</option>
+        <option value="">SELECT A CITY</option>
         <option value="current">MY CURRENT LOCATION</option>
         <option value="Europe/Athens">ATHENS</option>
         <option value="Europe/Dublin">DUBLIN</option>
