Updated the image link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://wallpapers.com/images/high/gudetama-lazy-egg-character-4qic95pp968fpsep.png" alt="">
+        <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/126/879/original/gudetama-lazy-egg-character-4qic95pp968fpsep.png?1716108811" alt="">
          <h1>
             World Clock
         </h1>
