--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     
     <footer>
-        This project was coded by <a href="https://github.com/nanceed" target="_blank"><strong>Nancy Duong</strong></a>
+        This project was coded by <a href="https://github.com/nanceed" target="_blank"><strong>Nancy Duong</strong></a>,
         and is open-sourced on <a href="https://github.com/nanceed/Wonderful-World-Clock" target="_blank">GitHub</a>
         and hosted on <a href="https://wonderful-world-clock.netlify.app/" target="_blank">Netlify</a>
     </footer>
