Fixed the spelling of city Tallinn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <option value="Asia/Hong_Kong">HONG KONG</option>
         <option value="America/New_York">NEW YORK</option>
         <option value="Atlantic/Reykjavik">REYKJAVIK</option>
-        <option value="Europe/Tallin">TALLIN</option>
+        <option value="Europe/Tallinn">TALLINN</option>
         <option value="Asia/Tokyo">TOKYO</option>
     </select>
     
